<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_margin="15dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="right"
            android:ems="4"
            android:textSize="25sp"
            android:text="@string/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>
        <EditText
            android:id="@+id/inputUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="right"
            android:ems="4"
            android:textSize="25sp"
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>
        <EditText
            android:inputType="textPassword"
            android:id="@+id/inputPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView

            android:gravity="right"
            android:ems="4"
            android:textSize="25sp"
            android:text="@string/retype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>
        <EditText
            android:id="@+id/inputRetype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>

    </LinearLayout>

    <TextView
        android:gravity="right"
        android:ems="4"
        android:textSize="25sp"
        android:text="@string/birthdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>

    <LinearLayout
        android:weightSum="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/inputBirth"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

        </EditText>
        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/select">

        </Button>

    </LinearLayout>
    <TextView
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender">

    </TextView>

    <RadioGroup
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/inputMale"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/male">

        </RadioButton>
        <RadioButton
            android:id="@+id/inputFemale"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/female">

        </RadioButton>
    </RadioGroup>
    <TextView
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hobbies">

    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">
        <CheckBox
            android:id="@+id/inputTennis"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tennis">

        </CheckBox>
        <CheckBox
            android:id="@+id/inputFutbal"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/futbal">

        </CheckBox>
        <CheckBox
            android:id="@+id/inputOtherSport"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/others">

        </CheckBox>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/reset"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/reset">

        </Button>
        <Button
            android:id="@+id/signup"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/signup">

        </Button>
    </LinearLayout>

</LinearLayout>